--- a/_data/about.yaml
+++ b/_data/about.yaml
@@ -1,3 +1,5 @@
+name: Nicole A Montano
+blurb: "I'm a software engineer in San Jose, California. I like to learn things. Sometimes I do stuff, too."
 interests: technology, reading, beer, pilates, animals, movies, music, fountain pens, Dallas Cowboys
 languages: Python, Java, C/C++, SQL
 tools: git, vim
