--- a/_data/activities.yaml
+++ b/_data/activities.yaml
@@ -7,6 +7,6 @@
 - name: "Grace Hopper Celebration 2014"
   loc: "Phoenix, AZ"
   desc: "Recipient of university grant to attend women's computing conference"
-- name: "Bank of America Women\'s Technology Summit 2015"
+- name: "Bank of America Women's Technology Summit 2015"
   loc: "New York, NY"
   desc: "Represent University of Texas at Dallas at summit of student and academic leaders to network and engage in dialogue about the business imperative for women in technology"
