--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 title: Nicole A Montano
 url: https://nicolemon.com
 github_project: nicolemon/nicolemon.com
+stylescheme: default
+markdown: kramdown
+sass:
+    sass_dir: _sass
