Add hackerrank, leetcode and update colors

--- a/_data/exitlinks.yaml
+++ b/_data/exitlinks.yaml
@@ -8,6 +8,10 @@
   url: https://github.com/nicolemon
 - name: exercism
   url: https://exercism.io/profiles/nicolemon
+- name: hackerrank
+  url: https://hackerrank.com/nicolemon
+- name: leetcode
+  url: https://leetcode.com/nicolemon
 - name: twitter
   url: https://twitter.com/nicolysis
 - name: goodreads
