Add mastodon, update icons

--- a/_data/exitlinks.yaml
+++ b/_data/exitlinks.yaml
@@ -14,3 +14,5 @@
   url: https://leetcode.com/nicolemon
 - name: twitter
   url: https://twitter.com/nicolysis
+- name: mastodon
+  url: https://social.linux.pizza/@nicolemon
